--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/my_scheduler_date_bot
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
+telegram.bot.token=5466422244:AAHUegc6ky87XDn7UIfcl5siUJFf5PQy3qI
+spring.liquibase.change-log=classpath:liquibase/changelog-master.yml
